# camelmailer

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  HANDOVER.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
config/: camelmailer.example.yml
crates/camelmailer/: Cargo.toml
crates/camelmailer-api/: Cargo.toml
crates/camelmailer-api/src/: app.rs  app_mailer.rs  auth_api.rs  billing.rs  cors.rs  dns.rs  insights.rs  lib.rs  memberships.rs  oidc.rs  org_sso_api.rs  org_sso_login.rs  resources.rs  saml.rs  scim.rs  server_api.rs  share.rs  sso.rs  tracking.rs  webauthn.rs  webhook_send.rs  workspace.rs  xmldsig.rs
crates/camelmailer-api/tests/: admin_api_tests.rs  app_mail_tests.rs  auth_api_tests.rs  billing_tests.rs  cors_tests.rs  dmarc_tests.rs  insights_tests.rs  message_import_tests.rs  oidc_tests.rs  org_sso_api_tests.rs  org_sso_login_tests.rs  rbac_tests.rs  saml_tests.rs  scim_tests.rs  sender_address_tests.rs  server_api_tests.rs  share_tests.rs  sso_tests.rs  template_copy_tests.rs  webauthn_tests.rs  webhook_test_send_tests.rs
crates/camelmailer-config/: Cargo.toml
crates/camelmailer-config/src/: lib.rs
crates/camelmailer-core/: Cargo.toml
crates/camelmailer-core/src/: admin_store.rs  auth.rs  auth_store.rs  bounce.rs  dmarc.rs  dns.rs  lib.rs  message.rs  mime.rs  model.rs  org_sso.rs  received_header.rs  server_store.rs  spf.rs  store.rs  template.rs  testing.rs  token.rs
crates/camelmailer-db/: Cargo.toml
crates/camelmailer-db/migrations/: 0001_schema.sql  0002_rls.sql  0003_resources.sql  0004_queue.sql  0005_message_metadata.sql  0006_webhook_requests.sql  0007_threat_scanning.sql  0008_tracking_tokens.sql  0009_server_ip_pool.sql  0010_server_config.sql  0011_message_metadata_json.sql  0012_message_streams.sql  0013_inbound_bypass.sql  0014_templates.sql  0015_auth.sql  0016_billing.sql  0016_domain_dkim_verification.sql  0016_saml_scim.sql  0016_webhook_events_headers.sql  0017_sender_addresses.sql  0020_dmarc_reports.sql  0020_sso_identities.sql  0021_webauthn.sql  0024_org_require_two_factor.sql  0025_message_shares.sql  0027_bounce_category.sql  0028_api_requests.sql  0029_org_sso.sql  0030_layouts.sql  0031_broadcast_streams.sql  0032_stream_ip_pool.sql  0033_broadcast_physical_address.sql  0034_subscriptions.sql  0035_campaigns.sql  0036_campaign_planning.sql  0037_layout_logo.sql  0038_admin_api_key_hash.sql  0039_admin_api_key_scope.sql  0040_track_domains.sql  0041_domain_check_dmarc.sql  (+1 more)
crates/camelmailer-db/src/: auth_pg.rs  lib.rs  org_sso_pg.rs  pg_store.rs  queue.rs  tracking.rs  webhook_queue.rs
crates/camelmailer-db/tests/: pg_tests.rs
crates/camelmailer-smtp/: Cargo.toml
crates/camelmailer-smtp/src/: lib.rs  server.rs  session.rs  spf_resolver.rs
crates/camelmailer-smtp/tests/: multi_listener_tests.rs  session_tests.rs  starttls_tests.rs
crates/camelmailer-worker/: Cargo.toml
crates/camelmailer-worker/src/: arf.rs  dkim.rs  dmarc.rs  inspection.rs  lib.rs  sender.rs  signer.rs  smtp_client.rs  ssrf.rs  tracking.rs  worker.rs
crates/camelmailer-worker/tests/: relay_tests.rs  worker_tests.rs
crates/camelmailer-worker/tests/fixtures/: test_domain_key.pem  test_signing_key.pem
crates/camelmailer-worker/tests/fixtures/dmarc/: google-style.xml  microsoft-style.xml  rfc-appendix-c.xml
crates/camelmailer/src/: main.rs
docs/: README.md  authentication.md  broadcast.md  campaigns.md  configuration.md  deliverability.md  dmarc.md  domains.md  import-export.md  inbound.md  install-deb.md  pricing.md  quickstart.md  sending.md  streams.md  suppressions.md  templates.md  tracking.md  webhooks.md
install/: docker-compose.yml
packaging/debian/: camelmailer-smtp.service  camelmailer-web.service  camelmailer-worker.service  postinst  postrm  prerm
scripts/: pg-init.sh
templates/: README.md  import.sh
web/: README.md
web/app/: .dockerignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
web/app/e2e/: smoke.mjs
web/app/public/: openapi.yaml  site.webmanifest
web/app/src/: App.tsx
web/app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/app/src/app/(app)/: layout.tsx
web/app/src/app/(marketing)/: content.ts  layout.tsx  marketing.css  page.tsx
web/app/src/app/login/: page.tsx
web/app/src/app/register/: page.tsx
web/app/src/app/reset-password/: page.tsx
web/app/src/components/: auth-shell.tsx  auth-social.tsx  brand-icons.tsx  code-panel.tsx  command-palette.tsx  data-export-dialog.tsx  data-import-dialog.tsx  empty-state.tsx  form-dialog.tsx  form-section.tsx  onboarding-checklist.tsx  org-switcher.tsx  page.tsx  shared.tsx  status-pill.tsx  theme.tsx
web/app/src/components/ui/: alert.tsx  button.tsx  card.tsx  data-table.tsx  dialog.tsx  sidebar.tsx  skeleton.tsx  sonner.tsx
web/app/src/layouts/: AppShell.tsx
web/app/src/lib/: api-extras.ts  api-p1.ts  api-p2.ts  api-p3.ts  api-p4.ts  api.ts  auth.tsx  credentials-helpers.test.ts  params.ts  template-library.json  webauthn.ts
web/app/src/pages/: Dashboard.tsx
web/app/src/pages/account/: Account.tsx
web/app/src/pages/admin/: AdminApiKeys.tsx  AuditLog.tsx  IpPools.tsx  Users.tsx
web/app/src/pages/auth/: AcceptInvitation.tsx  Login.tsx  OidcCallback.tsx  ResetPassword.tsx
web/app/src/pages/org/: OrgHome.tsx
web/app/src/pages/server/: Messaging.tsx  ResourceTabs.tsx  ServerHome.tsx
web/app/src/views/: AppShell.tsx  Dashboard.tsx  SharedMessage.tsx  dashboard-tables.tsx
web/app/src/views/account/: Account.tsx
web/app/src/views/admin/: AdminApiKeys.tsx  AuditLog.tsx  IpPools.tsx  Organizations.tsx  Users.tsx
web/app/src/views/auth/: AcceptInvitation.tsx  ConfirmSenderAddress.tsx  Login.tsx  (+3 more)
web/marketing/: build.py  content_docs.py  index.html  open-source.html  openapi.yaml  pricing.html  style.css  templates.html
web/marketing/docs/: api.html  self-hosting.html
web/marketing/legal/: acceptable-use.html  dpa.html  imprint.html  privacy.html  sub-processors.html  terms.html
(+90 files in other folders)
