[workspace]
resolver = "2"
members = [
    "crates/camelmailer-config",
    "crates/camelmailer-core",
    "crates/camelmailer-smtp",
    "crates/camelmailer-api",
    "crates/camelmailer-db",
    "crates/camelmailer-worker",
    "crates/camelmailer",
]

[workspace.package]
version = "3.3.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/relationsoftware/postal"

[workspace.dependencies]
camelmailer-config = { path = "crates/camelmailer-config" }
camelmailer-core = { path = "crates/camelmailer-core" }
camelmailer-smtp = { path = "crates/camelmailer-smtp" }
camelmailer-api = { path = "crates/camelmailer-api" }
camelmailer-db = { path = "crates/camelmailer-db" }
camelmailer-worker = { path = "crates/camelmailer-worker" }

argon2 = { version = "0.5", features = ["std"] }
async-trait = "0.1"
hickory-resolver = "0.24"
jsonwebtoken = { version = "9", default-features = false }
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rsa = { version = "0.9", features = ["sha2"] }
rustls-pemfile = "2"
sha1 = "0.10"
sha2 = "0.10"
tower-http = { version = "0.6", default-features = false, features = ["cors"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
webpki-roots = "0.26"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "migrate", "macros", "chrono"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "signal", "sync"] }
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
base64 = "0.22"
mail-builder = "0.4"
rand = "0.8"
hmac = "0.12"
md-5 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
ipnet = "2"
regex = "1"
subtle = "2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
