[workspace]
resolver = "2"
members = [
    "crates/camelmailer-config",
    "crates/camelmailer-core",
    "crates/camelmailer-smtp",
    "crates/camelmailer-api",
    "crates/camelmailer-db",
    "crates/camelmailer-worker",
    "crates/camelmailer",
]

[workspace.package]
version = "0.7.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/camelmailer/camelmailer"

[workspace.dependencies]
camelmailer-config = { path = "crates/camelmailer-config" }
camelmailer-core = { path = "crates/camelmailer-core" }
camelmailer-smtp = { path = "crates/camelmailer-smtp" }
camelmailer-api = { path = "crates/camelmailer-api" }
camelmailer-db = { path = "crates/camelmailer-db" }
camelmailer-worker = { path = "crates/camelmailer-worker" }

argon2 = { version = "0.5", features = ["std"] }
async-trait = "0.1"
hickory-resolver = "0.24"
idna = "1"
jsonwebtoken = { version = "9", default-features = false }
rcgen = "0.13"
roxmltree = "0.20"
flate2 = "1"
x509-cert = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rsa = { version = "0.9", features = ["sha2"] }
rustls-pemfile = "2"
sha1 = "0.10"
sha2 = "0.10"
tower-http = { version = "0.6", default-features = false, features = ["cors"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
webpki-roots = "0.26"
# 0.6.x is the first webauthn-rs line with pure-Rust crypto (crypto-glue) —
# the 0.5.x releases require OpenSSL, which this workspace deliberately
# avoids (rustls everywhere). Pinned exactly because it is a -dev release.
webauthn-rs = { version = "=0.6.1-dev", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "=0.6.1-dev"
webauthn-authenticator-rs = { version = "=0.6.1-dev", features = ["softpasskey"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "migrate", "macros", "chrono"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "signal", "sync"] }
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
base64 = "0.22"
mail-builder = "0.4"
rand = "0.8"
hmac = "0.12"
md-5 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
ipnet = "2"
quick-xml = "0.37"
zip = { version = "2", default-features = false, features = ["deflate"] }
regex = "1"
subtle = "2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# RSA key generation (per-domain DKIM keys) is unusably slow at opt-level 0;
# optimize just the bignum arithmetic in dev/test builds.
[profile.dev.package.num-bigint-dig]
opt-level = 2
