[package]
name = "camelmailer-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sha2 = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
camelmailer-config = { workspace = true }
camelmailer-core = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
subtle = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
roxmltree = { workspace = true }
flate2 = { workspace = true }
rsa = { workspace = true }
x509-cert = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rcgen = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
