[package]
name = "camelmailer-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
argon2 = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
hmac = { workspace = true }
ipnet = { workspace = true }
mail-builder = { workspace = true }
rand = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
