[package]
name = "camelmailer-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
camelmailer-config = { workspace = true }
camelmailer-core = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
camelmailer-smtp = { workspace = true }
rand = { workspace = true }
