[package]
name = "camelmailer-smtp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
camelmailer-config = { workspace = true }
camelmailer-core = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
hickory-resolver = { workspace = true }
hmac = { workspace = true }
md-5 = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
hmac = { workspace = true }
md-5 = { workspace = true }
rcgen = { workspace = true }
