[package]
name = "camelmailer-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64 = { workspace = true }
camelmailer-config = { workspace = true }
camelmailer-core = { workspace = true }
camelmailer-db = { workspace = true }
chrono = { workspace = true }
hickory-resolver = { workspace = true }
reqwest = { workspace = true }
rsa = { workspace = true }
rustls = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
webpki-roots = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
camelmailer-api = { workspace = true }
http-body-util = { workspace = true }
rand = { workspace = true }
rcgen = { workspace = true }
tokio-rustls = { workspace = true }
tower = { workspace = true }
